--- a/src/assets/css/scss/sections/_header.scss
+++ b/src/assets/css/scss/sections/_header.scss
@@ -55,6 +55,11 @@ header {
           @include lg {
               display: flex;
           }
+        
+          a {
+            margin-left: 32px;
+          }
+
       }
       .burger-menu {
           
