--- a/src/assets/css/scss/sections/_dropdown-menu.scss
+++ b/src/assets/css/scss/sections/_dropdown-menu.scss
@@ -9,13 +9,13 @@
     align-items: center;
     flex-direction: column;
     padding: 3rem 0;
-  }
 
-  .container a {
-    font-size: 2rem;
-    font-weight: 400;
-    color: currentColor;
-    margin-bottom: 2rem;
-    text-decoration: none;
+    a{
+      font-size: 2rem;
+      font-weight: 400;
+      color: $gray-800;
+      margin-bottom: 2rem;
+      text-decoration: none;
+    }
   }
 }
