--- a/src/assets/css/scss/sections/_header.scss
+++ b/src/assets/css/scss/sections/_header.scss
@@ -43,7 +43,7 @@ header {
   
             a {
               text-decoration: none;
-              color: currentColor;
+              color: $gray-800;
             }
           }
         }
