--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -1,4 +1,5 @@
 @import "./sections/header";
 @import "./sections/dropdown-menu";
+@import "./sections/showcase";
 @import "./sections/home-footer";
 @import "./sections/footer";
