--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -1,5 +1,6 @@
 @import "./sections/header";
 @import "./sections/dropdown-menu";
 @import "./sections/showcase";
+@import "./sections/brands";
 @import "./sections/home-footer";
 @import "./sections/footer";
