--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -2,5 +2,6 @@
 @import "./sections/dropdown-menu";
 @import "./sections/showcase";
 @import "./sections/brands";
+@import "./sections/app-feature";
 @import "./sections/home-footer";
 @import "./sections/footer";
