--- a/src/assets/css/scss/sections/_showcase.scss
+++ b/src/assets/css/scss/sections/_showcase.scss
@@ -3,10 +3,13 @@
 
   @include lg {
     padding-top: 40px;
+    
   }
 
   .container {
     display: grid;
+    margin-right: 100px;
+    margin-left: 100px;
     grid-template-columns: 1fr auto;
     grid-template-areas:
       "img"
