--- a/src/assets/css/scss/sections/_brands.scss
+++ b/src/assets/css/scss/sections/_brands.scss
@@ -23,6 +23,7 @@
       background-color: $white;
       border: 1px solid rgba(226, 229, 241, 1);
       border-radius: 8px;
+      cursor: pointer;
 
       @include md {
         width: 196px;
