--- a/src/assets/css/scss/sections/_footer.scss
+++ b/src/assets/css/scss/sections/_footer.scss
@@ -69,6 +69,10 @@
         width: 100%;
         padding-left: 16px;
         gap: 20px;
+
+        input::placeholder {
+          color: #3B3E46;
+        }
       }
 
       .form-container-succeed {
