--- a/src/assets/css/scss/views/_news.scss
+++ b/src/assets/css/scss/views/_news.scss
@@ -34,6 +34,7 @@
       padding-bottom: 1.5rem;
       margin-bottom: 1.5rem;
       @include shadow-s;
+      cursor: pointer;
 
       .image-container {
         border-radius: 0.5rem 0.5rem 0 0;
