--- a/src/assets/css/scss/views/_news.scss
+++ b/src/assets/css/scss/views/_news.scss
@@ -141,179 +141,135 @@
 }
 
 #newsletter {
-  background-color: var(--Gray-100, #f3f6ff);
-          padding: 80px 60px;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        }
+  background-color: $gray-100;
+  padding: 80px 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-        @media (max-width: 991px) {
-          .newsletter-signup {
-            padding: 0 20px;
-          }
-        }
+  @include lg {
+    .newsletter-signup {
+      padding: 0 20px;
+    }
+  }
 
-        .signup-container {
-          max-width: 856px;
-          width: 100%;
-          margin-top: 21px;
-          display: flex;
-          flex-direction: column;
-        }
+  .signup-container {
+    max-width: 53.5rem;
+    width: 100%;
+    margin-top: 21px;
+    display: flex;
+    flex-direction: column;
 
-        .signup-header {
-          display: flex;
-          gap: 20px;
-          align-items: flex-start;
-        }
+    .signup-header {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1.25rem;
+      align-items: flex-start;
 
-        @media (max-width: 991px) {
-          .signup-header {
-            flex-wrap: wrap;
-          }
-        }
+      .signup-title {
+        font-size: 2.5rem;
+      }
+    }
+  }
 
-        .signup-title {
-          font-size: 40px;
-          
-        }
+  .signup-content {
+    margin-top: 27px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    width: 100%;
 
-        @media (max-width: 991px) {
-          .signup-title {
-            max-width: 100%;
-          }
-        }
+    .signup-title {
+      margin: auto 0;
+      color: $gray-900;
+      width: 150px;
+    }
 
-        .signup-icon {
-          width: 65px;
-          aspect-ratio: 0.95;
-          object-fit: auto;
-          object-position: center;
-        }
+    .checkbox-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      @include text-s;
 
-        .signup-content {
-          margin-top: 27px;
-          display: flex;
-          gap: 1.5rem;
-          width: 100%;
-        }
-
-        @media (max-width: 991px) {
-          .signup-content {
-            flex-wrap: wrap;
-            max-width: 100%;
-          }
-        }
-
-        .signup-subtitle {
-          margin: auto 0;
-          color: $gray-900;
-          width: 150px;
-          
-        }
-
-        .checkbox-grid {
-          display: flex;
-          gap: 20px;
-          font-size: 14px;
-          color: var(--Gray-700, #565973);
-          font-weight: 400;
-          line-height: 160%;
-        }
-
-        @media (max-width: 991px) {
-          .checkbox-grid {
-            flex-wrap: wrap;
-          }
-        }
-
-        .column {
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-        }
+      .column {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
 
         .row {
           display: flex;
           flex-direction: row;
           align-items: center;
           gap: 0.5rem;
-        }
 
-        .signup-form {
-          margin-top: 64px;
-          display: flex;
-          gap: 16px;
-          font-size: 16px;
-          line-height: 160%;
-        }
-
-        @media (max-width: 991px) {
-          .signup-form {
-            flex-wrap: wrap;
-            margin-top: 40px;
+          .checkbox-input {
+            width: 1.5rem;
+            height: 1.5rem;
+            accent-color: $primary;
+            cursor: pointer;
           }
         }
+      }
+    }
+  }
+  .signup-form {
+    margin-top: 4rem;
+    display: flex;
+    gap: 1rem;
 
-        .input-wrapper {
-          flex: 1;
-          display: flex;
-          align-items: center;
-          gap: 8px;
-          padding: 0.5rem;
-          border: 1px solid rgba(212, 215, 229, 1);
-          border-radius: 8px;
-          background-color: $white;
+    .input-wrapper {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.5rem;
+      border: 1px solid rgba(212, 215, 229, 1);
+      border-radius: 0.5rem;
+      background-color: $white;
 
-          @include md {
-            padding: 1rem;
-          }
-        }
+      @include md {
+        padding: 1rem;
+      }
 
-        .email-input {
-          background: transparent;
-          outline: none;
-          border: none;
-          color: $gray-500;
-          width: 100%;
-        }
+      .email-input {
+        background: transparent;
+        outline: none;
+        border: none;
+        color: $gray-500;
+        width: 100%;
+      }
 
-        .email-input::placeholder {
-          color: var(--Gray-500, #b4b7c9);
-        }
+      .email-input::placeholder {
+        color: $gray-500;
+      }
+    }
 
-        .terms-agreement {
-          margin-top: 22px;
-          color: $gray-600;
-        }
+    .input-wrapper-succeed {
+      border: 1px solid $success;
+      input::placeholder {
+        color: $success !important;
+      }
+    }
 
-        @media (max-width: 991px) {
-          .terms-agreement {
-            max-width: 100%;
-          }
-        }
+    .input-wrapper-error {
+      border: 1px solid $danger;
+      input::placeholder {
+        color: $danger !important;
+      }
+    }
+  }
 
-        .asterisk {
-          color: $primary;
-        }
+  .terms-agreement {
+    margin-top: 22px;
+    color: $gray-600;
 
-        .terms-link,
-        .privacy-link {
-          color: rgba(99, 102, 241, 1);
-          text-decoration: underline;
-        }
-
-        .checkbox-item {
-          display: flex;
-          gap: 8px;
-          flex: 1;
-          align-items: center;
-        }
-
-        .checkbox-input {
-          width: 24px;
-          height: 24px;
-          accent-color: var(--Brand-Primary, #6366f1);
-          cursor: pointer;
-        }
+    .asterisk {
+      color: $primary;
+    }
+    .terms-link,
+    .privacy-link {
+      color: $primary;
+      text-decoration: underline;
+    }
+  }
+}
