--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -3,5 +3,6 @@
 @import "./sections/showcase";
 @import "./sections/brands";
 @import "./sections/app-feature";
+@import "./sections/slider";
 @import "./sections/home-footer";
 @import "./sections/footer";
