Feature section done

--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -4,5 +4,6 @@
 @import "./sections/brands";
 @import "./sections/app-feature";
 @import "./sections/slider";
+@import "./sections/features";
 @import "./sections/home-footer";
 @import "./sections/footer";
