--- a/src/assets/css/scss/sections/_slider.scss
+++ b/src/assets/css/scss/sections/_slider.scss
@@ -67,6 +67,11 @@
 
       .slider-description-text {
         text-align: center;
+        padding: 0 1rem;
+
+        @include md {
+          padding: 0;
+        }
       }
     }
 
