--- a/src/assets/css/scss/sections/_features.scss
+++ b/src/assets/css/scss/sections/_features.scss
@@ -84,6 +84,10 @@
   }
   .feature-image {
     height: auto;
-    width: 50%;
+    width: 250px;
+
+    @include lg {
+      width: auto;
+    }
   }
 }
