--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -5,5 +5,6 @@
 @import "./sections/app-feature";
 @import "./sections/slider";
 @import "./sections/features";
+@import "./sections/testimonials";
 @import "./sections/home-footer";
 @import "./sections/footer";
