--- a/src/assets/css/scss/_sections.scss
+++ b/src/assets/css/scss/_sections.scss
@@ -6,6 +6,7 @@
 @import "./sections/slider";
 @import "./sections/features";
 @import "./sections/testimonials";
+@import "./sections/faq";
 @import "./sections/subscribe";
 @import "./sections/home-footer";
 @import "./sections/footer";
