--- a/src/assets/css/scss/sections/_showcase.scss
+++ b/src/assets/css/scss/sections/_showcase.scss
@@ -84,7 +84,7 @@
           height: 44px;
           padding: 0 10px;
           border-radius: 40px;
-          background-color: var(--White, #fff);
+          background-color: #fff;
           box-shadow: 0px 2px 6.4px -1px rgba(19, 16, 34, 0.03),
             0px 4.4px 12px -1px rgba(19, 16, 34, 0.06);
 
