--- a/src/assets/css/scss/views/_contact.scss
+++ b/src/assets/css/scss/views/_contact.scss
@@ -47,6 +47,11 @@
           display: flex;
           flex-direction: column;
           gap: 0.75rem;
+
+          a {
+            display: flex;
+            align-items: center;
+          }
         }
       }
     }
@@ -197,12 +202,12 @@
         display: flex;
         gap: 1rem;
         align-items: center;
-    
+
         button {
           border: none;
           border-radius: 5px;
         }
-    
+
         i {
           padding: 12px;
         }
